Port over builtin block populators from MagicWorlds